Fix word-wrap in map pop-ups

--- a/assets/scss/components/_leaflet-popup-content.scss
+++ b/assets/scss/components/_leaflet-popup-content.scss
@@ -65,7 +65,7 @@
     color: $base-text-color;
     line-height: 1.2;
     margin-bottom: .4em;
-    word-break: break-all;
+    hyphens: auto;
   }
 
   & &__link {
